# exp_planning

lab02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab02
lab02/lab02_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
lab02/lab02_autogen/include/: ui_mainwindow.h
lab03/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  combinatorics.cpp  lab03
lab03/lab03_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
lab03/lab03_autogen/include/: ui_mainwindow.h
lab_1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab01  lab01.cbp  main.py  mainwindow.py  simulate.cpp
lab_1/.cmake/api/v1/reply/: cache-v2-1d227e43423437e3510e.json  cmakeFiles-v1-643a0bee49516d31944b.json  codemodel-v2-b74072b0eb044f934279.json  index-2023-02-27T18-58-09-0081.json  target-lab01-Debug-7c0ea761a22cca6ed59a.json  target-lab01_autogen-Debug-ca821926e3592fbccbba.json
lab_1/lab01_autogen/: mocs_compilation.cpp
lab_1/lab01_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
lab_1/lab01_autogen/JEGM6DUCPV/: moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
lab_1/lab01_autogen/include/: ui_mainwindow.h
qcustomplot/: qcustomplot.cpp  qcustomplot.h
